@@ -1,7 +1,8 @@
 # Example Mnemosyne configuration
 # ===============================
 #
-# This file is a Python script. 
+# This file is a Python script. The configuration defined here will generate a
+# very simple blog, somewhat like PyBlosxom's defaults.
 
 import os
 import mnemosyne
@@ -29,7 +30,7 @@ output_dir = os.path.expanduser('~/Mnemosyne/htdocs')
 # This is initially empty; add anything you want to use in all layouts. This
 # example uses:
 
-locals['blogname'] = 'Boring Example'
+locals['blogname'] = 'Simple Example'
 locals['blogroot'] = 'http://blog.example.invalid'
 locals['authname'] = 'Melete'
 locals['authemail'] = 'melete@example.invalid'
@@ -58,39 +59,76 @@ ignore = ('.svn', 'CVS', 'MT')
 # method that returned 'my-tag', so that you could use it in a link such as
 # ``<a href="http://blog/tag/my-tag/">My Tag</a>``.
 #
-# To easily create objects that work like this, the ``mnemosyne`` module
+# To easily create objects that work like this, the ``mnemosyne.utils`` module
 # includes a function ``cook`` which takes two arguments: the value itself,
 # and the value to use for its repr(). It then takes care of defining a new
 # class and overriding its ``__repr__`` method for you. Of course, if you do
 # not need to define a special repr(), this is not required.
 #
-# By default, this is not defined.
+# By default, this class is not defined.
 
 class EntryMixin:
-    # Pull anything you want out of self.msg (an email.Message.Message
-    # object), and use it to provide a new attribute. If there is no usable
-    # value, make sure there is some default for the repr() so that we don't
-    # accidentally create an invalid URL when we use it.
+    ## Pull anything you want out of self.msg (an email.Message.Message
+    ## object), and use it to provide a new attribute. If there is no usable
+    ## value, make sure there is some default for the repr() so that we don't
+    ## accidentally create an invalid URL when we use it.
+    #
+    #def _init_foobar(self):
+    #    try:
+    #        foobar = self.msg['X-Foobar']
+    #        cleaned = mnemosyne.utils.clean(foobar, 3)
+    #    except KeyError:
+    #        foobar = ''
+    #        cleaned = 'nofoo'
+    #
+    #    return mnemosyne.utils.cook(foobar, cleaned)
 
-    def _init_foobar(self):
-        try:
-            foobar = self.msg['X-Foobar']
-            cleaned = mnemosyne.utils.clean(foobar, 3)
-        except KeyError:
-            foobar = ''
-            cleaned = 'nofoo'
-
-        return mnemosyne.utils.cook(foobar, cleaned)
-
-    ## You could use Markdown instead of ReST to write entries; I'll comment
-    ## this out since you'd need to install it from http://err.no/pymarkdown/
-    ## and ``import pymarkdown``.
+    ## You could use Markdown instead of ReST to write entries; you'll need
+    ## to install it from http://err.no/pymarkdown/.
     #
     ## The formatting process may take a second, so rather than evaluating it
-    ## at startup, we will wait until the result is needed. You can apply
-    ## other transformations here, or cache the output of your preprocessor;
-    ## see mnemosyne.BaseEntry._prop_content for a more involved example.
+    ## at startup, we will wait until the result is needed.
+    #
+    #import pymarkdown
     #
     #def _prop_content(self):
-    #    s = self.msg.get_payload(decode=True)
-    #    return mnemosyne.cook(pymarkdown.Markdown(s), s[:100])
+    #    s = self.msg.get_body()
+    #    body = mnemosyne.utils.cook(pymarkdown.Markdown(s), s[:100])
+    #    return self.cache('content', body)
+
+    ## If you would occasionally like to paste a chunk of HTML or XML from
+    ## elsewhere into a message, you could use a different formatter depending
+    ## on the value of an ``X-Format:`` header. This uses Expat to ensure that
+    ## the output is valid XHTML; you could also use Tidy. Contributed by
+    ## Aigars Mahinovs.
+    #
+    #import xml.dom
+    #import xml.parsers.expat
+    #
+    #def _prop_content(self):
+    #    """Read in the message's body, strip any signature, and format using
+    #    reStructedText unless X-Format=='html'."""
+    #
+    #    s = self.msg.get_body(decode=True)
+    #    body = False
+    #
+    #    try:
+    #        if self.msg['X-Format'] == "html":
+    #            body = s.replace("&nbsp;", " ")
+    #            body = re.sub(r'&(?!\w{1,10};)',r'&amp;',body)
+    #            body = xml.dom.minidom.parseString("<div>" + body +
+    #                "</div>").toxml()
+    #    except KeyError:
+    #        pass
+    #    except xml.parsers.expat.ExpatError, e:
+    #        print "W: Parse failed for " + self.msg['Subject'] + " at " + \
+    #            self.msg['Date'] + " from " + \
+    #            str(int(time.mktime(time.strptime(self.msg["Date"],
+    #                "%a %b %d %H:%M:%S %Y"))))
+    #        print xml.parsers.expat.ErrorString(e.code), e.lineno, e.offset
+    #
+    #    if not body:
+    #        parts = docutils.core.publish_parts(s, writer_name='html')
+    #        body = parts['body']
+    #
+    #    return self.cache('content', body)
